# biennial-report

./: README.md  enviroment.yaml  setup.cfg
data/: ambient_network.json  supergage_network.json
notebooks/: 01_report_plots.ipynb
src/biennial_report/: loads.py  nmc_plot.py  plot.py
