[metadata]
name = biennial-report
version = 0.1.0
author = Timothy O. Hodson
author_email = thodson@usgs.gov
description = Data used in biennial report of the Illinois Nutrient Monitoring Council
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/illinois-nutrient-monitoring/biennial-report
project_urls =
    Bug Tracker = https://github.com/illinois-nutrient-monitoring/biennial-report
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
